--- a/packages/twenty-docker/.env.example
+++ b/packages/twenty-docker/.env.example
@@ -1,6 +1,6 @@
 TAG=latest
 
-# POSTGRES_ADMIN_PASSWORD=replace_me_with_a_strong_password
+POSTGRES_ADMIN_PASSWORD=replace_me_with_a_strong_password
 
 PG_DATABASE_HOST=db:5432
 
@@ -9,11 +9,25 @@ SERVER_URL=http://localhost:3000
 # FRONT_BASE_URL=http://localhost:3000
 
 # Use openssl rand -base64 32 for each secret
-# ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
-# LOGIN_TOKEN_SECRET=replace_me_with_a_random_string_login
-# REFRESH_TOKEN_SECRET=replace_me_with_a_random_string_refresh
-# FILE_TOKEN_SECRET=replace_me_with_a_random_string_refresh
-
+ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
+LOGIN_TOKEN_SECRET=replace_me_with_a_random_string_login
+REFRESH_TOKEN_SECRET=replace_me_with_a_random_string_refresh
+FILE_TOKEN_SECRET=replace_me_with_a_random_string_refresh
+AUTH_MICROSOFT_ENABLED=replace_me_with_a_random_string_refresh
+AUTH_MICROSOFT_CLIENT_ID=replace_me_with_a_random_string_refresh
+AUTH_MICROSOFT_TENANT_ID=replace_me_with_a_random_string_refresh
+AUTH_MICROSOFT_CLIENT_SECRET=replace_me_with_a_random_string_refresh
+AUTH_MICROSOFT_CALLBACK_URL=replace_me_with_a_random_string_refresh
+EMAIL_FROM_ADDRESS=replace_me_with_a_random_string_refresh
+EMAIL_SYSTEM_ADDRESS=replace_me_with_a_random_string_refresh
+EMAIL_FROM_NAME=replace_me_with_a_random_string_refresh
+EMAIL_DRIVER=logger
+EMAIL_SMTP_HOST=replace_me_with_a_random_string_refresh
+EMAIL_SMTP_PORT=replace_me_with_a_random_string_refresh
+EMAIL_SMTP_USER=replace_me_with_a_random_string_refresh
+EMAIL_SMTP_PASSWORD=replace_me_with_a_random_string_refresh
+AUTH_GOOGLE_ENABLED=replace_me_with_a_random_string_refresh
+SIGN_IN_PREFILLED=true
 SIGN_IN_PREFILLED=true
 
 STORAGE_TYPE=local
