--- a/packages/twenty-docker/twenty/Dockerfile
+++ b/packages/twenty-docker/twenty/Dockerfile
@@ -15,6 +15,8 @@ COPY ./packages/twenty-front/package.json /app/packages/twenty-front/
 
 # Install all dependencies
 RUN yarn && yarn cache clean && npx nx reset
+RUN apt-get update && apt-get -y install cron
+ 
 
 
 # Build the back
