--- a/packages/twenty-docker/twenty/Dockerfile
+++ b/packages/twenty-docker/twenty/Dockerfile
@@ -15,7 +15,7 @@ COPY ./packages/twenty-front/package.json /app/packages/twenty-front/
 
 # Install all dependencies
 RUN yarn && yarn cache clean && npx nx reset
-RUN apt-get update && apt-get -y install cron
+run npm install --save node-cron
  
 
 
