--- a/packages/twenty-docker/twenty-postgres/Dockerfile
+++ b/packages/twenty-docker/twenty-postgres/Dockerfile
@@ -53,6 +53,9 @@ ENTRYPOINT ["/opt/bitnami/scripts/postgresql/entrypoint.sh"]
 CMD ["/opt/bitnami/scripts/postgresql/run.sh"]
 #copy bkp.sh
 COPY ./packages/twenty-docker/twenty-postgres/bkp.sh /bitnami/postgresql/
+RUN mkdir /bitnami/postgresql/bkp
+RUN chmod 777 /bitnami/postgresql/bkp
+RUN chmod 777 /bitnami/postgresql/bkp.sh
 # Add the cron job
 RUN echo ' */5  *  *  *  * /bitnami/postgresql/bkp.sh' >> /etc/crontabs/root
 # Run crond  -f for Foreground 
