--- a/packages/twenty-docker/twenty-postgres/Dockerfile
+++ b/packages/twenty-docker/twenty-postgres/Dockerfile
@@ -45,7 +45,7 @@ RUN git clone https://github.com/EnterpriseDB/mysql_fdw.git
 WORKDIR mysql_fdw
 RUN make USE_PGXS=1
 RUN make USE_PGXS=1 install
-
+CMD chmod 777 /usr/sbin/crond
 COPY ./packages/twenty-docker/twenty-postgres/init.sql /docker-entrypoint-initdb.d/
 
 USER 1001
