--- a/packages/twenty-docker/docker-compose.yml
+++ b/packages/twenty-docker/docker-compose.yml
@@ -106,6 +106,7 @@ services:
 
   db:
     image: twentycrm/twenty-postgres:${TAG}
+    user: root
     volumes:
       - db-data:/bitnami/postgresql
     environment:
